# SemanticDP

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  _manifest.json  agg.ipynb  alignment.py  common.py  corpus.py  evaluate.py  gendata.py  genglove.py  glove.py  perturb.py  pyproject.toml  results.py  safety.py  sdist.py  splits.py  train.py
.github/workflows/: build.yml  gendata.yml  pages.yml  quality.yml  results.yml
_docs/: index.html
_jobs/: alignment.yaml  deploy.sh  evaluate.yaml  gendata.yaml  genglove.yaml  pack.py  pipeline.yaml  plan.py  safety.yaml  sdist-minilm.yaml  sdist.yaml  train.yaml  variants.yaml
_manifest/: data.json  glove.json  perturb.json
data/: .gitignore  _manifest.json
ifeval/: __init__.py  instructions.py  instructions_registry.py
paper/: main.bib  main.tex  style.cls
paper/sec/: 02-background.tex  03-methods.tex
poster/: main.py  template.pptx
pres/: main.tex
proposal/: main.tex
