[project]
name = "SemanticDP"
version = "0.1.0"
description = "Decomposing the Effects of Differential Privacy on LLM Hallucination and Misalignment"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "datasets>=5.0.0",
  "python-dotenv>=1.2.2",
  "wandb>=0.28.0",
  "mypy>=2.2.0",
  "ruff>=0.15.21",
  "immutabledict>=4.3.1",
  "langdetect>=1.0.9",
  "vllm>=0.25.0 ; sys_platform == 'linux'",
  "absl-py>=2.5.0",
  "nltk>=3.10.0",
  "transformers>=5.13.1",
  "huggingface-hub>=0.30.0",
  "pip>=26.1.2",
  "numpy>=2.3.5",
  "peft>=0.19.1",
  "opacus>=1.6.0",
]

[tool.ruff]
line-length = 120
indent-width = 2
target-version = "py312"
include = ["*.py", "*.ipynb"]
extend-exclude = ["ifeval"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["F722", "F821", "E731"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "F401"]

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.mypy]
python_version = "3.12"
platform = "linux"
ignore_missing_imports = true
disable_error_code = ["import-untyped", "unused-ignore"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["\\.ipynb_checkpoints/", "ifeval/"]

[[tool.mypy.overrides]]
module = ["ifeval.*"]
ignore_errors = true
follow_imports = "skip"
