[project]
name = "SemanticDP"
version = "0.1.0"
description = "Decomposing the Effects of Differential Privacy on LLM Hallucination and Misalignment"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = ["python-dotenv>=1.2.2", "wandb>=0.28.0", "numpy>=1.24"]

[dependency-groups]
data = ["datasets>=5.0.0", "huggingface-hub>=0.30.0"]
train = [
  "opacus>=1.6.0",
  "peft>=0.19.1",
  "torch>=2.10,<2.11",
  "transformers>=5.13.1",
]
evaluate = [
  "absl-py>=2.5.0",
  "datasets>=5.0.0",
  "immutabledict>=4.3.1",
  "langdetect>=1.0.9",
  "nltk>=3.10.0",
  "transformers>=5.13.1",
  "vllm>=0.19.1",
]
dev = ["mypy>=2.2.0", "ruff>=0.15.21"]

[tool.ruff]
line-length = 120
indent-width = 2
target-version = "py312"
include = ["*.py", "*.ipynb"]
extend-exclude = ["ifeval"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["F722", "F821", "E731"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "F401"]

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.mypy]
python_version = "3.12"
platform = "linux"
ignore_missing_imports = true
disable_error_code = ["import-untyped", "unused-ignore"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["\\.ipynb_checkpoints/", "ifeval/"]

[[tool.mypy.overrides]]
module = ["ifeval.*"]
ignore_errors = true
follow_imports = "skip"
